--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animate_do: ^3.3.4
   cupertino_icons: ^1.0.8
   device_preview: ^1.2.0
   flutter:
@@ -36,6 +37,7 @@ dependencies:
   flutter_svg: ^2.0.17
   gap: ^3.0.1
   hexcolor: ^3.0.1
+  pin_code_fields: ^8.0.1
   smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
